# yet-another-aliyun-exporter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  example.yaml  index.yaml  pyproject.toml
.github/workflows/: docker-publish.yml  helm-publish.yaml
ali_exporter/: __init__.py  __main__.py  collector.py  config.py  utils.py
aliyun_exporter/: __init__.py  collector.py
charts/aliyun-exporter/: Chart.yaml  values.yaml
charts/aliyun-exporter/templates/: NOTES.txt  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/aliyun-exporter/templates/config/: configmap.yaml  extra-secret.yaml
config/: config.yaml  example.yaml
